2005-09-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* Makefile.am: Disable install, show warning instead.
	* src/PageView.py (button_press): Catch problem with no loaded database
	* src/PersonView.py (button_press): Catch problem with no loaded database
	* src/GrampsDbBase.py (_get_from_handle): Catch problem with no loaded database
	* src/MapView.py: Updates
	* src/EditPerson.py: Change complete flag into marker combo
	* src/GrampsDbBase.py: Add map for custom marker values
	* src/PeopleModel.py: Add support for colored markers
	* src/PersonView.py: Add support for colored markers
	* src/RelLib.py: Change complete flag into marker combo
	* src/Utils.py: Add marker types
	* src/edit_person.glade: Change complete flag into marker combo

2005-09-15  Don Allingham  <don@gramps-project.org>
	* src/EditPlace.py: fix windowing history

2005-08-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py: pass DisplayState to TipOfDay
	* src/TipOfDay.py: Use DisplayState
	* src/const.py.in: add GRAMPS websites
	* src/ViewManager.py: Add TipOfDay; Make GRAMPS websites work again

2005-08-19  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: fixe some window management syntax errros
	* src/PageView.py: enable double click to edit
	* src/EditPerson.py: tried to enable window management
	* src/PersonView.py: make more compatible with base class

2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EventEditor.py: hacked about to make add work at least.

2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/TreeTips.py: set default delay to 2s
	
2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ToolTips.py: tooltip fix
	
2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/DisplayModels.py: call new tooltips generator
	* src/PeopleModel.py: call new tooltips generator
	* src/ToolTips.py: new tooltips generator added
	
2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>