@@ -147,6 +147,8 @@ class GrampsWindowManager:
         return self.id2item.get(window_id,None)
     
     def close_node(self,node):
+        import traceback
+        traceback.print_stack()
         item = self.get_item_from_node(node)
         self.close_item_recursively(item)
         self.remove_node(node)
@@ -295,8 +297,8 @@ class DisplayState(GrampsDBCallback.GrampsDBCallback):
             if GrampsKeys.get_statusbar() <= 1:
                 pname = NameDisplay.displayer.display(self.dbstate.active)
                 name = "[%s] %s" % (self.dbstate.active.get_gramps_id(),pname)
-            else:
-                name = self.display_relationship()
+#            else:
+#                name = self.display_relationship()
             self.status.push(self.status_id,name)
 
         while gtk.events_pending():
